# stonk_gui

./: .gitignore  README.md  pyproject.toml
src/: dot_env  logger.ini  setup.cfg
src/pkg/: __init__.py  ctx_mgr.py
src/pkg/chart_srv/: cfg_chart.ini  client.py  xcfg_chart.ini
src/pkg/chart_srv/scraper/: heat_map.py  stock_chart.py
src/pkg/config_srv/: utils.py
src/pkg/data_srv/: agent.py  cfg_data.ini  client.py  utils.py  xcfg_data.ini
src/pkg/gui/: main_window.py  main_window.ui
tests/: conftest.py  test_db.py
